deployments/nginx/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      tier: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      automountServiceAccountToken: false  # Minimize the admission of pods which lack an associated NetworkPolicy
      securityContext:
        runAsNonRoot: true  # Containers should run as a high UID to avoid host conflict
        runAsUser: 1000  # Using high UID to avoid conflicts
        readOnlyRootFilesystem: true  # Use read-only filesystem for containers where possible
        seLinuxOptions:
          type: "docker/default"  # Ensure that the seccomp profile is set to docker/default or runtime/default
      containers:
      - image: nginx@sha256:<IMAGE_DIGEST>  # Image should use digest
        name: nginx
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true  # Running container as non-root
          runAsUser: 10080  # Using high UID to avoid conflicts
          readOnlyRootFilesystem: true  # Mounting read-only filesystem
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL  # Dropping all capabilities
        resources:
          limits:
            cpu: "0.5"
            memory: "500Mi"
          requests:
            cpu: "0.1"
            memory: "100Mi"
        volumeMounts:
        - name: "wordpress-persistent-storage"
          mountPath: "/var/www/html"
        - name: nginx-custom-conf
          mountPath: /etc/nginx/custom.conf.d/nginx-custom.conf
          subPath: nginx-custom.conf
          readOnly: true
        - name: wp-hardening
          mountPath: /etc/nginx/custom.conf.d/wp-hardening.conf
          subPath: wp-hardening.conf
          readOnly: true
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
        - name: wordpress-conf-tpl
          mountPath: /etc/nginx/templates/wordpress.conf.template
          subPath: wordpress.conf.template
          readOnly: true
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 30  # Delay before liveness probe is initiated
          periodSeconds: 10  # How often to perform the probe
          timeoutSeconds: 5  # When the probe times out
          successThreshold: 1  # Minimum consecutive successes for the probe to be considered successful
          failureThreshold: 3  # Minimum consecutive failures for the probe to be considered failed
      volumes:
      - name: nginx-custom-conf
        configMap:
          name: nginx-custom-conf
          items:
            - key: nginx-custom.conf
              path: nginx-custom.conf
      - name: wp-hardening
        configMap:
          name: wp-hardening
          items:
            - key: wp-hardening.conf
              path: wp-hardening.conf
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: wordpress-conf-tpl
        configMap:
          name: wordpress-conf-tpl
          items:
            - key: wordpress.conf.template
              path: wordpress.conf.template
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc
