deployments/nginx/nginx-configmap.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mariadb
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      tier: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - image: mariadb:10.6
        name: mariadb
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
        resources:
          limits:
            cpu: "0.5"
            memory: "500Mi"
          requests:
            cpu: "0.1"
            memory: "100Mi"
        volumeMounts:
        - name: "mariadb-persistent-storage"
          mountPath: "/var/lib/mysql/"
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
    tier: backend
  name: mariadb-svc
  namespace: mariadb
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
    tier: backend
  type: ClusterIP
