deployments/nginx/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    tier: frontend
  name: nginx-svc
  namespace: nginx-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
    tier: frontend
  type: ClusterIP
