deployments/nginx/all-resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      tier: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      containers:
      - image: nginx@sha256:INSERT_IMAGE_DIGEST_HERE
        name: nginx
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          runAsUser: 10080
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        resources:
          limits:
            cpu: "0.5"
            memory: "500Mi"
          requests:
            cpu: "0.1"
            memory: "100Mi"
        volumeMounts:
        - name: "wordpress-persistent-storage"
          mountPath: "/var/www/html"
        - name: nginx-custom-conf
          mountPath: /etc/nginx/custom.conf.d/nginx-custom.conf
          subPath: nginx-custom.conf
          readOnly: true
        - name: wp-hardening
          mountPath: /etc/nginx/custom.conf.d/wp-hardening.conf
          subPath: wp-hardening.conf
          readOnly: true
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
        - name: wordpress-conf-tpl
          mountPath: /etc/nginx/templates/wordpress.conf.template
          subPath: wordpress.conf.template
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: nginx-custom-conf
        configMap:
          name: nginx-custom-conf
          items:
            - key: nginx-custom.conf
              path: nginx-custom.conf
      - name: wp-hardening
        configMap:
          name: wp-hardening
          items:
            - key: wp-hardening.conf
              path: wp-hardening.conf
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: wordpress-conf-tpl
        configMap:
          name: wordpress-conf-tpl
          items:
            - key: wordpress.conf.template
              path: wordpress.conf.template
      - name: "wordpress-persistent-storage"
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: nginx
  name: nginx-svc
spec:
  ports:
  - name: nginx-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
  namespace: nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
  egress:
  - to:
    - podSelector: {}
